--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,9 @@
 *.tdo
 *.pdf
 *.brf
-!/zju_thesis/logo/**/*.pdf
-!/zju_thesis/figures/**/*.pdf
-!/zju_thesis/contents/**/*.pdf
+*.DS_Store
+!/logo/**/*.pdf
+!/figures/**/*.pdf
+!/contents/**/*.pdf
 *.fls
 ~*.doc
