ignore original gitignores in all sub directories

--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,39 @@
-*.acn
-*.acr
-*.alg
-*.aux
-*.bbl
-*.blg
-*.dvi
-*.fdb_latexmk
-*.glg
-*.glo
-*.gls
-*.idx
-*.ilg
-*.ind
-*.ist
-*.lof
-*.log
-*.lot
-*.maf
-*.mtc
-*.mtc0
-*.nav
-*.nlo
-*.out
-*.pdfsync
-*.ps
-*.snm
-*.spl
-*.synctex*
-*.toc
-*.vrb
-*.xdy
-*.tdo
-*.pdf
-*.brf
-*.DS_Store
+**.acn
+**.acr
+**.alg
+**.aux
+**.bbl
+**.blg
+**.dvi
+**.fdb_latexmk
+**.glg
+**.glo
+**.gls
+**.idx
+**.ilg
+**.ind
+**.ist
+**.lof
+**.log
+**.lot
+**.maf
+**.mtc
+**.mtc0
+**.nav
+**.nlo
+**.out
+**.pdfsync
+**.ps
+**.snm
+**.spl
+**.synctex*
+**.toc
+**.vrb
+**.xdy
+**.tdo
+**.pdf
+**.brf
+**.DS_Store
 !/logo/**/*.pdf
 !/figures/**/*.pdf
 !/contents/**/*.pdf
